--- a/values/openbao.yaml
+++ b/values/openbao.yaml
@@ -1,7 +1,18 @@
 server:
   logLevel: debug
-  dev:
+  standalone:
     enabled: true
+    config: |
+      ui = true
+      listener "tcp" {
+        tls_disable = 1
+        address = "[::]:8200"
+        cluster_address = "[::]:8201"
+      }
+      storage "file" {
+        path = "/openbao/data"
+      }
+      unsafe_allow_api_audit_creation = true
   updateStrategyType: RollingUpdate
   service:
     type: NodePort
