--- a/values/postgres.yaml
+++ b/values/postgres.yaml
@@ -14,3 +14,4 @@ config:
   extraConfig:
     - logging_collector = on
     - log_directory = '/var/log/postgresql'
+    - log_line_prefix = '%m [%p] %u@%d '
