--- a/values/postgres.yaml
+++ b/values/postgres.yaml
@@ -26,6 +26,6 @@ args:
 customConfig: |
   listen_addresses = '*'
   logging_collector = on
+  log_destination = 'jsonlog'
   log_statement = 'all'
   log_directory = '/tmp/'
-  log_line_prefix = '%m [%p] %u@%d '
