--- a/values/keycloak.yaml
+++ b/values/keycloak.yaml
@@ -15,3 +15,19 @@ ingress:
 persistence:
   enabled: true
   size: 200Mi
+
+extraEnvVars:
+  - name: KC_LOG_LEVEL
+    value: "info,org.keycloak.events:debug,org.keycloak.events.audit:debug"
+  - name: KC_LOG_CONSOLE_OUTPUT
+    value: json
+  - name: KC_EVENTS_ENABLED
+    value: "true"
+  - name: KC_EVENTS_LIST
+    value: "LOGIN,LOGOUT,REGISTER,CLIENT_LOGIN,CODE_TO_TOKEN"
+  - name: KC_ADMIN_EVENTS_ENABLED
+    value: "true"
+  - name: KC_ADMIN_EVENTS_DETAILS_ENABLED
+    value: "true"
+  - name: KC_EVENTS_LISTENERS
+    value: "jboss-logging"
